// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AssignTrackingDomain form should have button disabled when form is pristine 1`] = `
<Component
  title="Select a Tracking Domain"
>
  <Grid>
    <Grid.Column
      md={6}
      xs={12}
    >
      <div>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </div>
      <Link
        replace={false}
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </Link>
    </Grid.Column>
    <Grid.Column
      md={6}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <h5>
          Linked tracking domain
        </h5>
        <form>
          <Field
            component={[Function]}
            disabled={false}
            helpText="Domains must be verified to be linked to a sending domain."
            name="trackingDomain"
            options={
              Array [
                Object {
                  "label": "track.me",
                  "value": "track",
                },
                Object {
                  "label": "dont.track.me",
                  "value": "dont-track",
                },
              ]
            }
          />
          <Button
            disabled={true}
            primary={true}
            size="default"
            submit={true}
          >
            Update Tracking Domain
          </Button>
        </form>
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: AssignTrackingDomain form should have button disabled when submitting 1`] = `
<Component
  title="Select a Tracking Domain"
>
  <Grid>
    <Grid.Column
      md={6}
      xs={12}
    >
      <div>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </div>
      <Link
        replace={false}
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </Link>
    </Grid.Column>
    <Grid.Column
      md={6}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <h5>
          Linked tracking domain
        </h5>
        <form>
          <Field
            component={[Function]}
            disabled={true}
            helpText="Domains must be verified to be linked to a sending domain."
            name="trackingDomain"
            options={
              Array [
                Object {
                  "label": "track.me",
                  "value": "track",
                },
                Object {
                  "label": "dont.track.me",
                  "value": "dont-track",
                },
              ]
            }
          />
          <Button
            disabled={true}
            primary={true}
            size="default"
            submit={true}
          >
            Updating...
          </Button>
        </form>
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: AssignTrackingDomain form should render form with initial values 1`] = `
<Component
  title="Select a Tracking Domain"
>
  <Grid>
    <Grid.Column
      md={6}
      xs={12}
    >
      <div>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </div>
      <Link
        replace={false}
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </Link>
    </Grid.Column>
    <Grid.Column
      md={6}
      xs={12}
    >
      <Panel
        sectioned={true}
      >
        <h5>
          Linked tracking domain
        </h5>
        <form>
          <Field
            component={[Function]}
            disabled={false}
            helpText="Domains must be verified to be linked to a sending domain."
            name="trackingDomain"
            options={
              Array [
                Object {
                  "label": "track.me",
                  "value": "track",
                },
                Object {
                  "label": "dont.track.me",
                  "value": "dont-track",
                },
              ]
            }
          />
          <Button
            disabled={false}
            primary={true}
            size="default"
            submit={true}
          >
            Update Tracking Domain
          </Button>
        </form>
      </Panel>
    </Grid.Column>
  </Grid>
</Component>
`;

exports[`Component: AssignTrackingDomain form should render panel loading component when data is loading 1`] = `
<Component
  title="Select a Tracking Domain"
>
  <Grid>
    <Grid.Column
      md={6}
      xs={12}
    >
      <div>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </div>
      <Link
        replace={false}
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </Link>
    </Grid.Column>
    <Grid.Column
      md={6}
      xs={12}
    >
      <PanelLoading
        minHeight="400px"
      />
    </Grid.Column>
  </Grid>
</Component>
`;
